git-commit by makefile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "gotoSymbolStack.currentStackPosition": 0,
   "gotoSymbolStack.maxStackPosition": 0,
-  "gotoSymbolStack.filePositionInfo": []
+  "gotoSymbolStack.filePositionInfo": [],
+  "files.associations": {
+    "iosfwd": "cpp"
+  }
 }
